--- a/findly-builder/src/app/components/bot-action/bot-action.component.scss
+++ b/findly-builder/src/app/components/bot-action/bot-action.component.scss
@@ -619,3 +619,6 @@
     .list-view-data .row_list .box-content :hover{
         background: #e5e8ec !important;
     }
+    .list-view-data .row_list .box-content .box :hover{
+        background : none  !important;
+    }
