--- a/findly-builder/src/app/components/synonyms/synonyms.component.scss
+++ b/findly-builder/src/app/components/synonyms/synonyms.component.scss
@@ -391,3 +391,9 @@ input[type=text]:focus {
         display: none;
     }
 } 
+input:focus::-webkit-input-placeholder {
+    color: #9898bd !important;
+}
+input::-webkit-input-placeholder {
+    color: #9898bd !important;
+}
